# csp

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  ReadMe.md  csp.sln  csp.vcxproj  csp.vcxproj.filters  csp_base.hpp  main.cpp  mingwBuild.bat  msvcBuild.bat  termial.bat  test.cpp  unixBuild.sh  xmake.lua
.github/workflows/: c-cpp.yml
3rd/CLI11/: github.txt
3rd/sxtwl_cpp/: CMakeLists.txt  README.md
3rd/sxtwl_cpp/export/C#/: GZ.cs  JDList.cs
3rd/sxtwl_cpp/export/java/: GZ.java
3rd/sxtwl_cpp/src/: CMakeLists.txt
base/: CMakeLists.txt  base.cpp  base.cxx  base.h  box_yxbase.cpp  xmake.lua  yxbase.cpp
box_base/: CMakeLists.txt  box_base.cpp  box_base.h
box_calendar/: CMakeLists.txt  calendar_base.cpp  calendar_base.h  calendar_v1.cpp  calendar_v1.h  calendar_v1_data.cpp  calendar_v1_data.h  calendar_v2.cpp  calendar_v2.h
box_qimen/: CMakeLists.txt  ReadMe.txt  qm_base.cpp  qm_base.h  qm_v1.cpp  qm_v1.h  qm_v2.cpp  qm_v2.h  qm_v3.cpp  qm_v3.h  qm_v4.cpp
box_yxbase/: CMakeLists.txt  box_yxbase.cpp  box_yxbase.h
box_zhdata/: CMakeLists.txt  zh_lang.cpp  zh_lang.h
calendar/: CMakeLists.txt  ReadMe.txt  calendar.vcxproj  calendar.vcxproj.filters  calendar_base.cpp  calendar_base.h  calendar_v1.cpp  calendar_v1.h  calendar_v2.cpp  calendar_v2.h  export.bat  xmake.lua
calendar/include/: calendar.h
calendar/src/: cal_sx.cxx  cal_sx.h  cal_table.cxx  cal_table.h  calendar.cxx  table_data.cxx  table_data.h
common/: cmd_show.cpp  cmd_show.h
config/: MSystem.cmake  system.cmake
csp/: csp_base.hpp  main.cxx  qm_use.cpp  xmake.lua
export/python3/: CMakeLists.txt  MANIFEST.in  README.md  build.bat  csp-module.cpp  csp_module.cpp  demo.py  pyproject.toml  setup.py
include/: qm_base.h  zh_lang.h
qimen/: CMakeLists.txt  export.bat  qimen.vcxproj  qimen.vcxproj.filters  qm_base.cpp  qm_base.h  qm_v1.cpp  qm_v1.h  qm_v2.cpp  qm_v2.h  qm_v3.cpp  qm_v3.h  qm_v4.cpp  qm_v4.h  xmake.lua
qimen/include/: qimen.h
qimen/src/: qimen.cpp  qimen.cxx  qm_v1.cpp  qm_v1.cxx  qm_v1.h  qm_v2.cpp  qm_v2.cxx  qm_v2.h  qm_v3.cpp  qm_v3.cxx  qm_v3.h  qm_v4.cpp  qm_v4.cxx  qm_v4.h
qm/: print_base.cpp  print_base.h  qm_use.cpp  qm_use.h
src/: CLI11.hpp  CMakeLists.txt  ColorConsole.hpp  csp_base.hpp  main.cpp  main.cxx  print.cpp  print.cxx  print.h  print_base.cpp  print_base.h  qm_use.cpp  qm_use.h  qmuse.cpp  qmuse.cxx  qmuse.h
swtwl/: day.cpp  export.bat  swtwl.vcxproj  swtwl.vcxproj.filters
sxtwl/: CMakeLists.txt  JD.h  day.h  xmake.lua
tyme4cpp/: CMakeLists.txt  tyme.cpp  tyme.h  util.cpp  util.h
yixue/: export.bat  yixue.vcxproj  yixue.vcxproj.filters
zhcn/: CMakeLists.txt  export.bat  xmake.lua  zh_lang.cpp  zh_lang.cxx  zh_lang.h  zhcn.vcxproj  zhcn.vcxproj.filters
