cmake_minimum_required(VERSION 3.16)
project(sxtwl)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 11)

if(NOT DEFINED USE_UTF8_ALL)
if (MSVC)
    add_compile_options(/source-charset:utf-8)
endif()
if (CMAKE_CXX_COMPILER_ID MATCHES "GNU" AND CMAKE_SYSTEM_NAME MATCHES "Windows")
    MESSAGE(STATUS "ofen Add MinGW Param.")
    add_compile_options(-finput-charset=utf-8)
    add_compile_options(-fexec-charset=gbk)
endif()
endif()
file(GLOB SRC_FILES  "*.cpp" )

if(UNIX)
    add_compile_options(-fPIC)
elseif(MSVC)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS)
endif()

add_library(sxtwl STATIC ${SRC_FILES})
target_include_directories(sxtwl PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})