cmake_minimum_required(VERSION 3.16)

project(zhcn LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT DEFINED USE_UTF8_ALL)
if (MSVC)
    add_compile_options(/source-charset:utf-8)
endif()
if (CMAKE_CXX_COMPILER_ID MATCHES "GNU" AND CMAKE_SYSTEM_NAME MATCHES "Windows")
    MESSAGE(STATUS "ofen Add MinGW Param.")
    add_compile_options(-finput-charset=utf-8)
    add_compile_options(-fexec-charset=gbk)
endif()
endif()

set(SOURCES zh_lang.h zh_lang.cxx)
add_library(zhcn STATIC ${SOURCES})
target_include_directories(zhcn PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})