[build-system]
requires = ["setuptools>=42", "wheel", "scikit-build"]
build-backend = "setuptools.build_meta"

[project]
name = "csp-qm"
version = "1.5.0"
authors = [
    {name = "taynpg", email = "taynpg@163.com"},
]
description = "A ShiJia QimenPan Cli Tool."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.package-data]
"csp_qm" = ["../../build/export/python3/*.pyd"]

[tool.distutils.bdist_wheel]
plat-name = "win_amd64"